--- a/Client2Web/App.config
+++ b/Client2Web/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="w2cServiceSoap" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost/w2cService/w2cService.asmx"
+                binding="basicHttpBinding" bindingConfiguration="w2cServiceSoap"
+                contract="Web2ClientServiceReferences.w2cServiceSoap" name="w2cServiceSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
