--- a/Client2Web/App.config
+++ b/Client2Web/App.config
@@ -1,18 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Client2Web.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="w2cServiceSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost/w2cService/w2cService.asmx"
-                binding="basicHttpBinding" bindingConfiguration="w2cServiceSoap"
-                contract="Web2ClientServiceReferences.w2cServiceSoap" name="w2cServiceSoap" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
+    <applicationSettings>
+        <Client2Web.Properties.Settings>
+            <setting name="Client2Web_w2cservice_w2cService" serializeAs="String">
+                <value>http://localhost/w2cService/w2cService.asmx</value>
+            </setting>
+        </Client2Web.Properties.Settings>
+    </applicationSettings>
 </configuration>
