tried to force them together again...

--- a/Client2Web/Client2Web.csproj
+++ b/Client2Web/Client2Web.csproj
@@ -21,9 +21,10 @@
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
+    <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>http://localhost/Deploy/</InstallUrl>
+    <MinimumRequiredVersion>1.0.0.58</MinimumRequiredVersion>
     <ApplicationRevision>58</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
@@ -87,6 +88,7 @@
   <ItemGroup>
     <Compile Include="HandelUserInput.cs" />
     <Compile Include="IWeb2Client.cs" />
+    <Compile Include="myAppPath.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -94,6 +96,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="RegKeyHandler.cs" />
     <Compile Include="Web References\w2cservice\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
