--- a/Client2WebInstaller/Client2WebInstaller.csproj
+++ b/Client2WebInstaller/Client2WebInstaller.csproj
@@ -27,7 +27,7 @@
     <ProductName>PCFPassthrough</ProductName>
     <PublisherName>Formpipe AB</PublisherName>
     <MinimumRequiredVersion>1.0.0.25</MinimumRequiredVersion>
-    <ApplicationRevision>103</ApplicationRevision>
+    <ApplicationRevision>134</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -130,6 +130,16 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <PublishFile Include="Binaries\RegistryKeySettings.exe">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
     <PublishFile Include="Binaries\setup.exe">
       <Visible>False</Visible>
       <Group>
@@ -142,6 +152,7 @@
     </PublishFile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Binaries\RegistryKeySettings.exe" />
     <Content Include="Binaries\setup.exe" />
     <None Include="Web References\w2cService2\w2cService.disco" />
   </ItemGroup>
