--- a/Client2WebInstaller/App.config
+++ b/Client2WebInstaller/App.config
@@ -15,7 +15,7 @@
     <applicationSettings>
         <Client2WebInstaller.Properties.Settings>
             <setting name="Client2WebInstaller_w2c_service_w2cService" serializeAs="String">
-                <value>http://localhost/w2cService/w2cService.asmx</value>
+                <value>http://192.168.178.128/Web2Client/w2cService.asmx</value>
             </setting>
         </Client2WebInstaller.Properties.Settings>
     </applicationSettings>
