--- a/Client2Web/App.config
+++ b/Client2Web/App.config
@@ -14,8 +14,8 @@
     </system.serviceModel>
     <applicationSettings>
         <Client2Web.Properties.Settings>
-            <setting name="Client2Web_w2cservice_w2cService" serializeAs="String">
-                <value>http://localhost/w2cService/w2cService.asmx</value>
+            <setting name="PCF_w2c_service_w2cService" serializeAs="String">
+                <value>http://192.168.178.128/Web2Client/w2cService.asmx</value>
             </setting>
         </Client2Web.Properties.Settings>
     </applicationSettings>
