download a document via web service, documentManagementService

--- a/Client2Web/App.config
+++ b/Client2Web/App.config
@@ -17,6 +17,10 @@
             <setting name="PCF_w2c_service_w2cService" serializeAs="String">
                 <value>http://192.168.178.128/Web2Client/w2cService.asmx</value>
             </setting>
+            <setting name="PCF_DocumentManagementService_DocumentManagementService"
+                serializeAs="String">
+                <value>http://192.168.178.128/Web2Client/DocumentManagementService.asmx</value>
+            </setting>
         </Client2Web.Properties.Settings>
     </applicationSettings>
 </configuration>
