--- a/Client2Web/Properties/Settings.settings
+++ b/Client2Web/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="PCF_w2c_service_w2cService" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://192.168.178.128/Web2Client/w2cService.asmx</Value>
     </Setting>
+    <Setting Name="PCF_DocumentManagementService_DocumentManagementService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://192.168.178.128/Web2Client/DocumentManagementService.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
